--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </aside>
         </div>
     </div>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="./index.js"></script>
 </body>
 </html>
